fix(components): update combobox list to use overflow: auto rather than scroll (#1687)
* update css

* update Combobox to use overflow-x as auto

--- a/packages/components/src/Combobox/components/ComboboxContent/ComboboxContentList/ComboboxContentList.css
+++ b/packages/components/src/Combobox/components/ComboboxContent/ComboboxContentList/ComboboxContentList.css
@@ -8,7 +8,7 @@
   max-height: calc(var(--space-small) * 33.33);
   margin: 0;
   padding: 0;
-  overflow: scroll;
+  overflow: auto;
   list-style: none;
   flex-direction: column;
   gap: var(--space-smaller);
